[package]
name = "n_translator"
version = "0.1.0"
edition = "2021"
description = "Simple book translator using Ollama"

[dependencies]
ollama-rs = "0.2.4"
clap = { version = "4.5.24", features = ["derive"] }
epub = "2.1.2"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
tokio-macros = "2.5.0"
html5ever = "0.29.0"
markup5ever_rcdom = "0.5.0-unofficial"